tests/error/functionRedefined.tpc
int test(void){
	return 15;
}

char test(void){
	return '&';
}

int main(void){
	return 0;
}